# Resumechecker

./: README.md
.github/workflows/: anna-app-publish.yml  build-release.yml  resume-reviewer.yml
examples/anna-app-resume-reviewer/: .gitignore  DEPLOY.md  README.md  app.json  manifest.json  package-lock.json  package.json
examples/anna-app-resume-reviewer/.hallmark/: log.json  preflight.json
examples/anna-app-resume-reviewer/bundle/: anna-tool-ids.js  app.js  index.html  style.css  tokens.css
examples/anna-app-resume-reviewer/executas/resume-reviewer-python/: README.md  executa.json  pyproject.toml  resume_reviewer_plugin.py
examples/anna-app-resume-reviewer/fixtures/: happy-path.jsonl
examples/anna-app-resume-reviewer/tests/bundle/: app.spec.ts
examples/anna-app-resume-reviewer/tests/e2e/: resume-reviewer.e2e.mjs
examples/anna-app-resume-reviewer/tests/plugin/: test_pdf_extraction.py
