[project]
name = "tool-nikku696969-resume-reviewer-cvkbfasx"
version = "0.1.1"
description = "Resume Reviewer Executa for Anna Apps: extracts resumes and produces structured review feedback via Anna host sampling with deterministic fallback."
requires-python = ">=3.10"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }
dependencies = [
  "executa-sdk>=0.1.0",
  "pdfminer-six>=20260107",
]

[project.scripts]
"tool-nikku696969-resume-reviewer-cvkbfasx" = "resume_reviewer_plugin:main"

[tool.uv.sources]
executa-sdk = { path = "../../../../sdk/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["resume_reviewer_plugin.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
